--- a/.travis.yml
+++ b/.travis.yml
@@ -14,6 +14,13 @@ jobs:
       script:
         - make
 
+    - stage: build and test
+      script:
+        - make
+        - make start
+        - curl --silent localhost:8080 | grep -c Algernon
+        - make stop
+
     - stage: build and push image
       script:
         - make
