--- a/.travis.yml
+++ b/.travis.yml
@@ -14,12 +14,22 @@ jobs:
       script:
         - make
 
+    - stage: build and test
+      script:
+        - make build
+        - make start
+        - make test
+        - make stop
+
     - stage: build and push image
       script:
         - make
-        - docker tag ${DOCKER_USERNAME}/docker-algernon:${ALGERNON_VERSION} ${DOCKER_USERNAME}/docker-algernon:latest
         - docker login --username "${DOCKER_USERNAME}" --password "${DOCKER_PASSWORD}"
-        - docker push ${DOCKER_USERNAME}/docker-algernon:${ALGERNON_VERSION}
+        #
+        - docker tag  ${USER}/algernon:latest ${DOCKER_USERNAME}/docker-algernon:latest
         - docker push ${DOCKER_USERNAME}/docker-algernon:latest
+        #
+        - docker tag  ${DOCKER_USERNAME}/docker-algernon:latest ${DOCKER_USERNAME}/docker-algernon:${ALGERNON_VERSION}
+        - docker push ${DOCKER_USERNAME}/docker-algernon:${ALGERNON_VERSION}
         - docker logout
 
